unpackaged/main/default/objects/USAL_EOB_Data__c/USAL_EOB_Data__c.object-meta.xml
<CustomObject>
    <description>Explanation of Benefits</description>
    <label>USAL EOB Data</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>USAL EOB Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>USAL EOBs Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>