unpackaged/main/default/objects/USAL_EOB_Data__c/fields/Adjustment_Type__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Adjustment Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>