unpackaged/main/default/objects/USAL_EOB_Data__c/fields/Claimant_Insured_Name__c.field-meta.xml
<CustomField>
    <fullName>Claimant_Insured_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Claimant Insured Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>