unpackaged/main/default/objects/USAL_EOB_Data__c/fields/Detail_Amount__c.field-meta.xml
<CustomField>
    <fullName>Detail_Amount__c</fullName>
    <label>Detail Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>