unpackaged/main/default/objects/USAL_EOB_Data__c/fields/Payment_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Payment_External_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payment External ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>