unpackaged/main/default/objects/USAL_EOB_Data__c/fields/Through_Date__c.field-meta.xml
<CustomField>
    <fullName>Through_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Through Date</label>
    <type>Date</type>
</CustomField>