unpackaged/main/default/objects/USAL_EOB_Data__c/fields/USAL_Payment_Data__c.field-meta.xml
<CustomField>
    <fullName>USAL_Payment_Data__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>USAL Payment Data</label>
    <referenceTo>USAL_Payment_Data__c</referenceTo>
    <relationshipLabel>USAL EOBs Data</relationshipLabel>
    <relationshipName>USAL_EOBs_Data</relationshipName>
    <type>Lookup</type>
</CustomField>